--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 		<springframework.version>3.2.4.RELEASE</springframework.version>
 		<junit.version>4.7</junit.version>
 		<mirage-util.version>1.0.0</mirage-util.version>
+		<mybatisPlugin.version>1.0.0</mybatisPlugin.version>
+		<dbcp.version>1.4</dbcp.version>
+		<mybatis-spring.version>1.2.2</mybatis-spring.version>
+		<cglib.version>2.2.2</cglib.version>
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -52,14 +57,94 @@
 				<version>${mirage-util.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>limeng32.mybatisPlugin</groupId>
-				<artifactId>cachePlugin</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
+				<groupId>limeng32.mybatis</groupId>
+				<artifactId>mybatisPlugin</artifactId>
+				<version>${mybatisPlugin.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>limeng32.mybatisPlugin</groupId>
-				<artifactId>mapperPlugin</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>${dbcp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis-spring</artifactId>
+				<version>${mybatis-spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib-nodep</artifactId>
+				<version>${cglib.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-expression</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aop</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-oxm</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aspects</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-instrument</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jms</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-struts</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-instrument-tomcat</artifactId>
+				<version>${springframework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
