Add module account-captcha.

--- a/pom.xml
+++ b/pom.xml
@@ -164,5 +164,6 @@
 	<modules>
 		<module>../account-email</module>
 		<module>../account-persist</module>
+		<module>../account-captcha</module>
 	</modules>
 </project>
