--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<mybatis-spring.version>1.2.2</mybatis-spring.version>
 		<cglib.version>2.2.2</cglib.version>
 		<log4j.version>1.2.17</log4j.version>
+		<mysql-connector-java.version>5.1.29</mysql-connector-java.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -149,7 +150,7 @@
 			<dependency>
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
-				<version>5.1.29</version>
+				<version>${mysql-connector-java.version}</version>
 				<scope>runtime</scope>
 			</dependency>
 		</dependencies>
@@ -168,7 +169,8 @@
 		</pluginManagement>
 	</build>
 	<modules>
-		<module>../account-email</module>
-		<module>../account-persist</module>
+		<module>account-email</module>
+		<module>account-persist</module>
+		<module>account-captcha</module>
 	</modules>
 </project>
