--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<cglib.version>2.2.2</cglib.version>
 		<log4j.version>1.2.17</log4j.version>
 		<mysql-connector-java.version>5.1.29</mysql-connector-java.version>
+		<hamcrest.version>1.3</hamcrest.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -152,6 +153,12 @@
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql-connector-java.version}</version>
 				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>${hamcrest.version}</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
