Stable account-service module.

--- a/account-service/src/test/resources/service.properties
+++ b/account-service/src/test/resources/service.properties
@@ -13,3 +13,9 @@ email.username=test@limeng32.com
 email.password=123456
 email.auth=true
 email.systemEmail=test1@limeng32.com
+
+jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://limeng32.mysql.rds.aliyuncs.com:3306/mybatis?autoReconnect=true&characterEncoding=UTF8
+jdbc.url=jdbc:mysql://115.28.134.232:3306/mybatis?autoReconnect=true&characterEncoding=UTF8
+jdbc.username=restma
+jdbc.password=Aptx4869
