--- a/account-web/pom.xml
+++ b/account-web/pom.xml
@@ -34,7 +34,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>account-web2</finalName>
+		<finalName>account</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
