--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -64,5 +64,9 @@
 			<groupId>org.unitils</groupId>
 			<artifactId>unitils-easymock</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 	</dependencies>
 </project>
