--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<mysql-connector-java.version>5.1.29</mysql-connector-java.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<unitils.version>3.4.2</unitils.version>
+		<commons-codec.version>1.10</commons-codec.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -208,6 +209,11 @@
 				<artifactId>unitils-spring</artifactId>
 				<version>${unitils.version}</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>${commons-codec.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
