--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -68,5 +68,9 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>limeng32.unitils</groupId>
+			<artifactId>unitilsPlugin</artifactId>
+		</dependency>
 	</dependencies>
 </project>
