--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<unitils.version>3.4.2</unitils.version>
 		<commons-codec.version>1.10</commons-codec.version>
+		<unitilsPlugin.version>0.1.0</unitilsPlugin.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -214,6 +215,12 @@
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>${commons-codec.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>limeng32.unitils</groupId>
+				<artifactId>unitilsPlugin</artifactId>
+				<version>${unitilsPlugin.version}</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
