Add spring-test-dbunit for test.

--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -72,5 +72,23 @@
 			<groupId>limeng32.unitils</groupId>
 			<artifactId>unitilsPlugin</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.springtestdbunit</groupId>
+			<artifactId>spring-test-dbunit</artifactId>
+			<version>1.0.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.7</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
