--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<springframework.version>3.2.4.RELEASE</springframework.version>
 		<junit.version>4.7</junit.version>
 		<mirage-util.version>1.1.0</mirage-util.version>
-		<mybatisPlugin.version>1.0.0</mybatisPlugin.version>
+		<mybatisPlugin.version>1.1.0-SNAPSHOT</mybatisPlugin.version>
 		<dbcp.version>1.4</dbcp.version>
 		<mybatis-spring.version>1.2.2</mybatis-spring.version>
 		<cglib.version>2.2.2</cglib.version>
@@ -20,7 +20,10 @@
 		<hamcrest.version>1.3</hamcrest.version>
 		<unitils.version>3.4.2</unitils.version>
 		<commons-codec.version>1.10</commons-codec.version>
-		<unitilsPlugin.version>0.1.0</unitilsPlugin.version>
+		<spring-test-dbunit.version>1.2.1</spring-test-dbunit.version>
+		<slf4j-api.version>1.7.7</slf4j-api.version>
+		<slf4j-log4j12.version>1.7.7</slf4j-log4j12.version>
+		<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -217,9 +220,27 @@
 				<version>${commons-codec.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>limeng32.unitils</groupId>
-				<artifactId>unitilsPlugin</artifactId>
-				<version>${unitilsPlugin.version}</version>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>${javax.servlet-api.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.github.springtestdbunit</groupId>
+				<artifactId>spring-test-dbunit</artifactId>
+				<version>${spring-test-dbunit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j-api.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>${slf4j-log4j12.version}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
