--- a/account-captcha/pom.xml
+++ b/account-captcha/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>limeng32.mirage</groupId>
 		<artifactId>account-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>account-captcha</artifactId>
 	<name>Account Captcha</name>
