--- a/account-email/pom.xml
+++ b/account-email/pom.xml
@@ -5,7 +5,7 @@
   <parent>
   	<groupId>limeng32.mirage</groupId>
   	<artifactId>account-parent</artifactId>
-  	<version>1.0.0-SNAPSHOT</version>
+  	<version>1.0.0</version>
   </parent>
   <properties>
   	<javax.mail.version>1.4.1</javax.mail.version>
