--- a/account-persist/pom.xml
+++ b/account-persist/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>limeng32.mirage</groupId>
 		<artifactId>account-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>account-persist</artifactId>
 	<name>Account Persist</name>
