Add interface Comment and Story.

--- a/account-web/pom.xml
+++ b/account-web/pom.xml
@@ -80,6 +80,6 @@
 	<parent>
 		<groupId>limeng32.mirage</groupId>
 		<artifactId>account-parent</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 </project>
