--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<properties>
 		<springframework.version>3.2.4.RELEASE</springframework.version>
 		<junit.version>4.7</junit.version>
-		<mirage-util.version>1.1.1</mirage-util.version>
+		<mirage-util.version>1.2.0</mirage-util.version>
 		<mybatisPlugin.version>1.1.0-SNAPSHOT</mybatisPlugin.version>
 		<dbcp.version>1.4</dbcp.version>
 		<mybatis-spring.version>1.2.2</mybatis-spring.version>
@@ -24,6 +24,7 @@
 		<slf4j-api.version>1.7.7</slf4j-api.version>
 		<slf4j-log4j12.version>1.7.7</slf4j-log4j12.version>
 		<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
+		<fastjson.version>1.2.7</fastjson.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -242,6 +243,11 @@
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>${slf4j-log4j12.version}</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
