Add account-persist-test.xml and account-service-test.xml.

--- a/account-web/src/main/webapp/WEB-INF/web.xml
+++ b/account-web/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath:account-service.xml
+			classpath:account-web.xml
 		</param-value>
 	</context-param>
 	<listener>
