--- a/account-web/pom.xml
+++ b/account-web/pom.xml
@@ -7,6 +7,7 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<fileupload.version>1.3.1</fileupload.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,6 +52,12 @@
 		<dependency>
 			<groupId>com.github.springtestdbunit</groupId>
 			<artifactId>spring-test-dbunit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${fileupload.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 	<build>
