--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<slf4j-log4j12.version>1.7.7</slf4j-log4j12.version>
 		<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
 		<fastjson.version>1.2.7</fastjson.version>
-		<core-parent.version>0.0.1-SNAPSHOT</core-parent.version>
+		<core-parent.version>0.0.1</core-parent.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
